[tool.poetry]
name = "doom2"
version = "0.1.0"
description = ""
authors = ["mrstern84 <56913915+mrstern84@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "1.5.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
